# ChangeLog for net-libs/libpcap
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.198 2014/07/27 10:32:17 phajdan.jr Exp $

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libpcap-1.5.3.ebuild:
  x86 stable wrt bug #511502

*libpcap-1.6.1-r1 (23 Jul 2014)

  23 Jul 2014; Jeroen Roovers <jer@gentoo.org> -libpcap-1.6.1.ebuild,
  +libpcap-1.6.1-r1.ebuild, files/libpcap-1.6.1-configure.patch:
  Remove insufficient net-wireless/bluez header patch (bug #517806).

  22 Jul 2014; Jeroen Roovers <jer@gentoo.org> libpcap-1.6.1.ebuild,
  +files/libpcap-1.6.1-configure.patch,
  +files/libpcap-1.6.1-prefix-solaris.patch:
  Check for bluetooth/mgmt.h (net-wireless/bluez-4) before use (bug #517772).
  Convert sed scripts to patches.

*libpcap-1.6.1 (22 Jul 2014)

  22 Jul 2014; Jeroen Roovers <jer@gentoo.org> +libpcap-1.6.1.ebuild:
  Version bump. Temporarily require lower net-wireless/bluez to satisfy
  expectations of certain features not present in later versions.

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> libpcap-1.5.3.ebuild:
  Stable on alpha, bug #511502

  22 Jun 2014; Akinori Hattori <hattya@gentoo.org> libpcap-1.5.3.ebuild:
  ia64 stable wrt bug #511502

  09 Jun 2014; Markus Meier <maekke@gentoo.org> libpcap-1.5.3.ebuild:
  arm stable, bug #511502

  08 Jun 2014; Chema Alonso <nimiux@gentoo.org> libpcap-1.5.3.ebuild:
  Stable for amd64 wrt bug #511502

  29 May 2014; Jeroen Roovers <jer@gentoo.org> libpcap-1.5.3.ebuild:
  Stable for HPPA (bug #511502).

*libpcap-1.5.3 (22 Jan 2014)

  22 Jan 2014; Tim Harder <radhermit@gentoo.org> +libpcap-1.5.3.ebuild:
  Version bump.

*libpcap-1.5.2 (16 Dec 2013)

  16 Dec 2013; Tim Harder <radhermit@gentoo.org> +libpcap-1.5.2.ebuild:
  Version bump.

  01 Dec 2013; Fabian Groffen <grobian@gentoo.org> libpcap-1.5.1.ebuild:
  Fix building on Darwin with Prefix toolchain

*libpcap-1.5.1 (28 Nov 2013)
