@@ -4,10 +4,10 @@ DESCRIPTION=A system-independent library for user-level network packet capture
 EAPI=5
 HOMEPAGE=http://www.tcpdump.org/
 IUSE=bluetooth dbus ipv6 netlink static-libs canusb
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
 LICENSE=BSD
 RDEPEND=bluetooth? ( <net-wireless/bluez-5:= ) dbus? ( sys-apps/dbus ) netlink? ( dev-libs/libnl ) canusb? ( virtual/libusb )
 SLOT=0
 SRC_URI=http://www.tcpdump.org/release/libpcap-1.6.1.tar.gz http://www.jp.tcpdump.org/release/libpcap-1.6.1.tar.gz
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=1e8be2895104cd88abef26dbbe4a383e
+_md5_=7ce3e45d0c43f6574564e3100010c123
