@@ -4,7 +4,7 @@ DESCRIPTION=The GNU Compiler Collection
 EAPI=2
 HOMEPAGE=http://gcc.gnu.org/
 IUSE=multislot regression-test vanilla altivec nopie nossp doc gcj awt hardened multilib objc objc-gc mudflap libssp objc++ fixed-point graphite +nls +nptl +cxx +fortran +openmp
-KEYWORDS=alpha amd64 arm hppa ia64 ~m68k ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=alpha amd64 arm hppa ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=GPL-3+ LGPL-3+ || ( GPL-3+ libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.3+
 PDEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/gcc-config-1.7
 RDEPEND=sys-libs/zlib nls? ( virtual/libintl ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1 graphite? ( >=dev-libs/cloog-ppl-0.15.10 >=dev-libs/ppl-0.11 )
@@ -12,4 +12,4 @@ RESTRICT=strip
 SLOT=4.6
 SRC_URI=mirror://gnu/gcc/gcc-4.6.4/gcc-4.6.4.tar.bz2 mirror://gentoo/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.6.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.6.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-patches-1.2.tar.bz2 mirror://gentoo/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	gnuconfig	ee02e61d6c68cee478e2e69214b7caef	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	51ad5130f4a69b1a118ca5296de276ae	toolchain	d6c75fc785526c5dc2a980c94ce6b3d5	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=70d6c63b754eecaea9e10604de012424
+_md5_=28eb2a35cce83a71c0b491e374dd62e2
