@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.1013 2014/08/01 11:12:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.1014 2014/08/01 19:17:36 zlogene Exp $
+
+  01 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> gcc-4.6.4.ebuild:
+  ppc64 stable wrt bug #504798
 
   01 Aug 2014; Raúl Porcel <armin76@gentoo.org> gcc-4.6.4.ebuild:
   ia64 stable wrt #504798
