@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libpcap
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.198 2014/07/27 10:32:17 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.199 2014/08/01 19:13:45 tgall Exp $
+
+  01 Aug 2014;  <tgall@gentoo.org> libpcap-1.3.0-r1.ebuild,
+  libpcap-1.6.1-r1.ebuild:
+  arm64, initial support
 
   26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libpcap-1.5.3.ebuild:
   x86 stable wrt bug #511502
